# people_reidentification

./: tasks.txt
body_extractor/: CMakeLists.txt  extractor.cpp  ground_plane_extractor.cpp  people.cpp  people_online.cpp
depth2pcd/: .depth2pcd.cpp.swp  CMakeLists.txt  depth2pcd.cpp
pcd2image/: .pcd2image.cpp.swp  CMakeLists.txt  pcd2image.cpp
preprocessing/: CMakeLists.txt
preprocessing/include/: depth2pcl.h
preprocessing/src/: depth2pcl.cpp  people_detection.cpp
